compiler/testData/diagnostics/nativeTests/specialBackendChecks/objCInterop/t27.kt
// FIR_IDENTICAL
// WITH_PLATFORM_LIBS
import kotlinx.cinterop.*
import platform.darwin.*
import platform.Foundation.*

@OptIn(kotlinx.cinterop.ExperimentalForeignApi::class)
class Zzz : NSAssertionHandler() {
    @OptIn(kotlinx.cinterop.BetaInteropApi::class)
    @ObjCAction
    fun foo(<!MUST_BE_OBJC_OBJECT_TYPE!>x: String<!>) = println(x)
}
